--- a/Website/about_us.html
+++ b/Website/about_us.html
@@ -17,13 +17,13 @@
     <div class="container-fluid">
         <div class="card-deck mb-4">
         <div class="card mb-3 bg-light">
-          <h3 class="card-title">Alyssa Difurio</h3>
+          <h3 class="card-title">Alyssa DiFurio</h3>
           <div class="card">
             <img class="card-img-top" width="300" height="400" src="pictures/Alyssa.jpg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
-            <p class="lead">Alyssa is an aspiring full time Options Trader and Growth Stock Investor. She enjoys spending time with her cat and her two snakes. In order to provide a more fulfilling life for her animal companions, she has joined a data science bootcamp in hopes of bolstering her skills for her resume to land a better job. </p>
+            <p class="lead">Alyssa holds a degree in International Relations and a masters certificate in Cybersecurity Policy and Management. She hopes to move into the intelligence or defense field and is taking this bootcamp to broaden her range of skills. Alyssa loves taking her cat on walks and spending time with her niece</I>.  </p>
           </div>
           <div class="card-footer">
           </div>
@@ -49,7 +49,7 @@
           <hr>
           <div class="card-body ">
             <p class="lead">
-                Bekhem is a full -time CPI/Lean lead in the Semiconductor industry. Taking pride in the learning and studying with team members is intriguing; he always looks forward to intaking substance from an ever-changing field. Bekhem also loves boxing and painting.</p>
+                Bekhem is a full-time CPI/Lean lead in the Semiconductor industry. Taking pride in the learning and studying with team members is intriguing; he always looks forward to intaking substance from an ever-changing field. Bekhem also loves boxing and painting.</p>
           </div>
           <div class="card-footer">
      
@@ -58,11 +58,11 @@
         <div class="card mb-3 bg-light">
           <h3 class="card-title">Vanessa Martinez</h3>
           <div class="card">
-            <img class="card-img-top" width="300" height="400"  src="pictures/Shaunghnessy.jpg" alt='Card image cap'>
+            <img class="card-img-top" width="300" height="400"  src="pictures/Vanessa.jpeg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
-            <p class="lead">Vanessa is from Louisiana, but currently resides in Dallas, Texas. SMU's Data Science Bootcamp is where she found her passion for coding. Lover of all things art, shopping is her cardio, and binge-watching shows and movies is her favorite hobby.</p>
+            <p class="lead">Vanessa is from Dallas, Texas and has a Bachelors of Science degree in Business Administration from UCF. She has an extensive background in floral design and is pursuing data analytics and visualization through SMU’s Data Science Boot Camp. Vanessa’s hobbies include shopping, cooking, working out, ordering Crumbl cookies, and binge-watching movies and shows.</p>
           </div>
           <div class="card-footer">
     
