--- a/Website/aboutus.html
+++ b/Website/aboutus.html
@@ -14,6 +14,47 @@
 </head>
 
 <body>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="home.html" class="logo"><img src="pictures/Volcanoes (3).jpg" alt="img" style="max-width: 40px; max-height: 40px"></img></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="home.html">Home</a>
+          </li>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Dashboard</a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="map.html">Map</a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="sunbar.html">Graphs</a>
+              </li>
+          <li class="nav-item dropdown ">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Data Info</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="sourcedata.html">Data Table</a>
+              <a class="dropdown-item" href="workcited.html">Work Cited</a>
+            </div>
+          </li>
+
+            </ul>
+          </div>
+          
+        </div>
+      </nav>
+      <br>
+      <br>
+
+</body>
+
+<body>
     <div class="container-fluid">
         <div class="card-deck mb-4">
         <div class="card mb-3 bg-light">
