--- a/Website/aboutus.html
+++ b/Website/aboutus.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = 'eng'>
 
 <head>
-    <meta charset="utf-8">
-    <title>About Us</title>
-    <!-- Boostrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css">
-    <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta charset = 'UTF-8'>
+    <title>Work Cited</title>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link rel="stylesheet" href="static/css/style.css">
 
 </head>
 
@@ -17,11 +20,6 @@
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html" class="logo"><img src="pictures/Volcanoes (3).jpg" alt="img" style="max-width: 40px; max-height: 40px"></img></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -58,9 +56,9 @@
     <div class="container-fluid">
         <div class="card-deck mb-4">
         <div class="card mb-3 bg-light">
-          <h3 class="card-title">Alyssa DiFurio</h3>
+          <h3 style = text-align:center class="card-title">Alyssa DiFurio</h3>
           <div class="card">
-            <img class="card-img-top" width="300" height="400" src="pictures/Alyssa.jpg" alt='Card image cap'>
+            <img class="card-img-top" width="300" height="350" src="pictures/Alyssa.jpg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
@@ -70,9 +68,9 @@
           </div>
         </div>
         <div class="card mb-3 bg-light">
-          <h3 class="card-title">Alexandra Flores</h3>
+          <h3 style = text-align:center class="card-title">Alexandra Flores</h3>
           <div class="card">
-            <img class="card-img-top" width="300" height="300"  src="pictures/Alex.jpg" alt='Card image cap'>
+            <img class="card-img-top" width="300" height="350"  src="pictures/Alex.jpg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
@@ -83,9 +81,9 @@
           </div>
         </div>
         <div class="card mb-3 bg-light">
-          <h3 class="card-title">Bekhem Horne</h3>
+          <h3 style = text-align:center class="card-title">Bekhem Horne</h3>
           <div class="card">
-            <img class="card-img-top" width="300" height="400"  src="pictures/Bekhem.jpg" alt='Card image cap'>
+            <img class="card-img-top" width="300" height="350"  src="pictures/Bekhem.jpg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
@@ -97,9 +95,9 @@
           </div>
         </div>
         <div class="card mb-3 bg-light">
-          <h3 class="card-title">Vanessa Martinez</h3>
+          <h3 style = text-align:center class="card-title">Vanessa Martinez</h3>
           <div class="card">
-            <img class="card-img-top" width="300" height="400"  src="pictures/Vanessa.jpeg" alt='Card image cap'>
+            <img class="card-img-top" width="300" height="350"  src="pictures/Vanessa.jpeg" alt='Card image cap'>
           </div>
           <hr>
           <div class="card-body ">
