--- a/Website/home.html
+++ b/Website/home.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset = 'UTF-8'>
-    <title>Volcanoes</title>
+    <title>Go to the Movies</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -20,10 +20,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html" class="logo"><img src="pictures/Volcanoes (3).jpg" alt="img" style="max-width: 40px; max-height: 40px"></img></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      
       
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav ml-auto">
@@ -56,22 +53,22 @@
 
   <main>
     <div class="intro">
-      <h1>Volcanoes of the Earth</h1>
-      <p>Click learn more to learn about volcanoes of the Earth.</p>
+      <h1>Make A Movie</h1>
+      <p>Select from the following menu to generate your own movie!</p>
        <form action="index.html">
-         <button type="submit">Learn More</button>
+         <button type="submit">Will you win?</button>
       </form>
     </div>
     <div class="project">
       <div class="work">
         <i class="fas fa-project-diagram"></i>
         <p class="work-heading">Project</p>
-        <p class="work-text">We decided to do our visualization project on volcanoes due to a group bonding session over the song “Ring of Fire” by Johnny Cash. The "Ring of Fire" is a horseshoe-shaped section of the Pacific Ocean that is the location of 75% of the world's volcanoes.</p>
+        <p class="work-text">We decided to do our project over the success rates of movies to see what contributes to a movies success the most.</p>
       </div>
       <div class="work">
         <i class="fas fa-bullseye"></i>
         <p class="work-heading">Objective</p>
-        <p class="work-text">Our goal is to compare the summit and elevation of volcanoes in various regions, compare volcanic types according to epoch periods, and provide information on the number of volcanoes in various regions.</p>
+        <p class="work-text">Our goal is to give a fun, interactive page that shows users how success a movie can be.</p>
       </div>
       <div class="work">
         <i class="fas fa-digital-tachograph"></i>
@@ -81,10 +78,10 @@
     </div>
     <div class="about-volcanoes">
       <div class="about-volcanoes-text">
-        <h2>About Volcanoes</h2>
-        <p>A volcano is a vent or opening that allows molten rock (magma) from the Earth's crust to reach the surface. There are three different stages of volcanoes: Active, Dormant, and Extinct. An active volcano is one that has erupted recently, and there is the possibility that it may erupt again. A dormant volcano is one that has not erupted for a long time, however, it may still erupt in the future. An extinct volcano is one which has erupted thousands of years ago, but it will probably never erupt again.</p>
+        <h2>About the data</h2>
+        <p>And a more detail description to what the user gets to experiment with to make a movie</p>
       </div>
-      <img src= pictures/VolPic1.jpg>
+      <!--<img src= pictures/film.jpg>-->
     </div>
   </main>
 </body>
@@ -104,7 +101,7 @@
       align-items: center;
       width: 100%;
       height: 520px;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("pictures/VolcanoPic2.jpg");
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("pictures/film.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -127,7 +124,7 @@
     }
 
     .intro button {
-      background-color: #ff9500;
+      background-color: #E50914;
       color: #000;
       padding: 10px 25px;
       border: none;
